[gd_scene load_steps=21 format=2]

[ext_resource path="res://Launch.gd" type="Script" id=1]
[ext_resource path="res://CelestialBody.tscn" type="PackedScene" id=2]
[ext_resource path="res://CircleProgress.tscn" type="PackedScene" id=3]
[ext_resource path="res://Spawners.gd" type="Script" id=4]
[ext_resource path="res://EyeOfProvidence.gd" type="Script" id=5]
[ext_resource path="res://moon.png" type="Texture" id=6]
[ext_resource path="res://EnemySpawner.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI.tscn" type="PackedScene" id=8]
[ext_resource path="res://arrow.png" type="Texture" id=9]
[ext_resource path="res://FollowCam.gd" type="Script" id=10]
[ext_resource path="res://bg_space_seamless.png" type="Texture" id=11]
[ext_resource path="res://bg_space_seamless_fl1.png" type="Texture" id=12]
[ext_resource path="res://Background.gd" type="Script" id=13]
[ext_resource path="res://bg_space_seamless_fl2.png" type="Texture" id=14]

[sub_resource type="Environment" id=6]
background_mode = 4
glow_enabled = true
glow_bicubic_upscale = true

[sub_resource type="CircleShape2D" id=1]
resource_local_to_scene = true
radius = 310.0

[sub_resource type="CircleShape2D" id=4]
radius = 314.102

[sub_resource type="CircleShape2D" id=5]
radius = 328.002

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 1, 0, 0, 0, 1, 0, 0, 1 )

[node name="Launch" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="CanvasLayer" parent="."]
layer = -101
script = ExtResource( 13 )

[node name="TextureRect" type="TextureRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 11 )
expand = true
stretch_mode = 2

[node name="TextureRect2" type="TextureRect" parent="Background"]
margin_left = -5000.0
margin_top = -5000.0
margin_right = 5000.0
margin_bottom = 5000.0
mouse_filter = 2
texture = ExtResource( 12 )
expand = true
stretch_mode = 2

[node name="TextureRect3" type="TextureRect" parent="Background"]
margin_left = -5000.0
margin_top = -5000.0
margin_right = 5000.0
margin_bottom = 5000.0
mouse_filter = 2
texture = ExtResource( 14 )
expand = true
stretch_mode = 2

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 2, 2 )
limit_left = -5000
limit_top = -5000
limit_right = 5000
limit_bottom = 5000
limit_smoothed = true
editor_draw_limits = true
script = ExtResource( 5 )
zoom_min = 0.5
zoom_max = 2.5

[node name="FollowCam" type="Camera2D" parent="."]
limit_left = -5000
limit_top = -5000
limit_right = 5000
limit_bottom = 5000
smoothing_enabled = true
editor_draw_limits = true
script = ExtResource( 10 )

[node name="Moon" parent="." instance=ExtResource( 2 )]
mass = 10000.0

[node name="CollisionShape2D" parent="Moon" index="0"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Moon"]
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="HurtBox" type="Area2D" parent="Moon"]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Moon/HurtBox"]
visible = false
shape = SubResource( 4 )

[node name="HitBox" type="Area2D" parent="Moon"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Moon/HitBox"]
visible = false
shape = SubResource( 5 )

[node name="OrbitPrediction" type="Line2D" parent="."]
width = 20.0
width_curve = SubResource( 3 )
default_color = Color( 1, 0, 0, 1 )
gradient = SubResource( 2 )

[node name="CircleProgress" parent="." instance=ExtResource( 3 )]

[node name="UI" parent="." instance=ExtResource( 8 )]

[node name="LaunchLine" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 0, 0, 1144, 2256 )
width = 100.0
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 9 )
texture_mode = 1

[node name="Spawners" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="LEnemySpawner" parent="Spawners" instance=ExtResource( 7 )]
margin_left = -6005.0
margin_top = -4925.0
margin_right = -5005.0
margin_bottom = 4991.0
mouse_filter = 2

[node name="REnemySpawner" parent="Spawners" instance=ExtResource( 7 )]
margin_left = 5011.0
margin_top = -4925.0
margin_right = 6011.0
margin_bottom = 4949.0
mouse_filter = 2

[node name="TEnemySpawner" parent="Spawners" instance=ExtResource( 7 )]
margin_left = -4992.0
margin_top = -5932.0
margin_right = 4963.0
margin_bottom = -5006.0
mouse_filter = 2

[node name="BEnemySpawner" parent="Spawners" instance=ExtResource( 7 )]
margin_left = -4992.0
margin_top = 5024.0
margin_right = 4963.0
margin_bottom = 5950.0
mouse_filter = 2

[node name="Tween" type="Tween" parent="Spawners"]

[editable path="Moon"]
